// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Cell /> renders correctly 1`] = `
.dBoZoY {
  -webkit-flex-basis: auto;
  -ms-flex-basis: auto;
  flex-basis: auto;
  padding: calc(0.5 * 0);
  width: calc(100% * 1);
}

@media (min-width: 25em) {
  .dBoZoY {
    width: calc(100% * 1);
  }
}

@media (min-width: 40em) {
  .dBoZoY {
    width: calc(100% * 1);
  }
}

<div
  className="sc-bdVaJa dBoZoY"
/>
`;

exports[`<Cell /> renders correctly with gutter 1`] = `
.kYLCCF {
  -webkit-flex-basis: auto;
  -ms-flex-basis: auto;
  flex-basis: auto;
  padding: calc(0.5 * 10px);
  width: calc(100% * 1);
}

@media (min-width: 25em) {
  .kYLCCF {
    width: calc(100% * 1);
  }
}

@media (min-width: 40em) {
  .kYLCCF {
    width: calc(100% * 1);
  }
}

<div
  className="sc-bdVaJa kYLCCF"
/>
`;

exports[`<Cell /> renders correctly with lg 1`] = `
.dBoZoY {
  -webkit-flex-basis: auto;
  -ms-flex-basis: auto;
  flex-basis: auto;
  padding: calc(0.5 * 0);
  width: calc(100% * 1);
}

@media (min-width: 25em) {
  .dBoZoY {
    width: calc(100% * 1);
  }
}

@media (min-width: 40em) {
  .dBoZoY {
    width: calc(100% * 1);
  }
}

<div
  className="sc-bdVaJa dBoZoY"
/>
`;

exports[`<Cell /> renders correctly with md 1`] = `
.dBoZoY {
  -webkit-flex-basis: auto;
  -ms-flex-basis: auto;
  flex-basis: auto;
  padding: calc(0.5 * 0);
  width: calc(100% * 1);
}

@media (min-width: 25em) {
  .dBoZoY {
    width: calc(100% * 1);
  }
}

@media (min-width: 40em) {
  .dBoZoY {
    width: calc(100% * 1);
  }
}

<div
  className="sc-bdVaJa dBoZoY"
/>
`;

exports[`<Cell /> renders correctly with sm 1`] = `
.dBoZoY {
  -webkit-flex-basis: auto;
  -ms-flex-basis: auto;
  flex-basis: auto;
  padding: calc(0.5 * 0);
  width: calc(100% * 1);
}

@media (min-width: 25em) {
  .dBoZoY {
    width: calc(100% * 1);
  }
}

@media (min-width: 40em) {
  .dBoZoY {
    width: calc(100% * 1);
  }
}

<div
  className="sc-bdVaJa dBoZoY"
/>
`;
